# KitaMap_Berlin

./: .gitignore  AGENTS.md  README.md  main.py  noxfile.py  pyproject.toml  pyrightconfig.json  run_analysis.py
data/processed/: README.md
data/raw/: README.md
data/results/: README.md
docs/: README.md  methodology.md
notebooks/: 01_daycare_data_processing.ipynb  01_daycare_data_processing.py  02_demographic_forecasting.ipynb  02_demographic_forecasting.py  03_district_analysis.ipynb  03_district_analysis.py  04_spatial_analysis.ipynb  04_spatial_analysis.py  README.md
src/: config.py  spatial_analysis.py
