[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kitamap-berlin"
version = "1.0.0"
description = "GIS-basierte Analyse der Kindertagesstätten-Versorgung in Berlin"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Silas Pignotti" }]
maintainers = [{ name = "Silas Pignotti" }]
keywords = ["gis", "geospatial", "berlin", "kindergartens", "analysis", "carto", "openstreetmap"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "geopandas>=0.12.0",
    "shapely>=1.8.0",
    "pyproj>=3.4.0",
    "fiona>=1.8.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.10.0",
    "folium>=0.14.0",
    "scikit-learn>=1.1.0",
    "prophet>=1.1.0",
    "statsmodels>=0.13.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "notebook>=6.4.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "selenium>=4.0.0",
    "geopy>=2.2.0",
    "osmnx>=1.2.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "python-dotenv>=0.19.0",
    "tqdm>=4.64.0",
    "python-dateutil>=2.8.0",
    "pytz>=2022.1",
    "openrouteservice>=2.3.0",
    "osmium>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pyright>=1.1.0",
    "nox>=2024.3.2",
    "jupytext>=1.16.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/silas-workspace/KitaMap_Berlin"
Documentation = "https://github.com/silas-workspace/KitaMap_Berlin#readme"
Repository = "https://github.com/silas-workspace/KitaMap_Berlin"
"Bug Tracker" = "https://github.com/silas-workspace/KitaMap_Berlin/issues"

[project.scripts]
kitamap = "run_analysis:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "run_analysis.py", "main.py"]
pythonVersion = "3.8"
typeCheckingMode = "basic"
reportAttributeAccessIssue = false
extraPaths = ["src"]
